# novaclaw

./: .gitignore  1.启动后端开发环境.bat  2.停止后端开发环境.bat  AI_AGENT_SYSTEM_DOCUMENTATION.md  LLM-api.json  NovaClaw对话页面渲染机制技术分析.md  README.md  RELEASE_NOTES.md  bbf2ff42-8fea-4685-b049-6e46150e96a9.jsonl  dev-test.bat  docker-compose.yml  index.html  jeeves-test.md  package-lock.json  package.json  rebuild-frontend.bat  soul.md  tailwind.config.js  vite.config.ts  weather.html  weiChat_dingTalk文件传输分析文档.md  会话记录.jsonl  停止前后端开发环境.bat  停止前端开发环境 .bat  启动前后端开发环境.bat  启动前端开发环境.bat  天气查询接口信息.md  日志.md  输入.json
.codebuddy/plans/: novaclaw-rust-backend-spec_80b72c4c.md
.codebuddy/rules/: 1.mdc
.deepseek/: instructions.md
.github/workflows/: build.yml
.trae/rules/: 1.md
agent/default/: SOUL.md
backend/: Cargo.toml
backend/.novaclaw/truncated-results/: 1780621281124-954c8764-web_fetch.txt  1780621282276-954c8be4-web_fetch.txt  1780621283384-954c9038-web_fetch.txt  1780621328933-954d4225-web_fetch.txt  1780621391352-954e35f8-web_fetch.txt  1780621392435-954e3a33-web_fetch.txt  1780621529032-95504fc8-web_fetch.txt
backend/src/: bg_task.rs  config.rs  cron.rs  error.rs  lib.rs  logging.rs  main.rs  mcp.rs  storage.rs  tauri_cmd.rs  test_main.rs  utils.rs
backend/src/agent/: cot.rs  log.rs  mod.rs  prompt.rs  repair.rs  runtime.rs  session.rs  storm.rs  task.rs  task_detector.rs
backend/src/dingtalk/: adapter.rs  card.rs  connection.rs  credential.rs  frames.rs  gateway.rs  handler.rs  message.rs  mod.rs
backend/src/im/: adapter.rs  config.rs  gateway.rs  handler.rs  mod.rs  registry.rs  reload.rs  session.rs  types.rs
backend/src/llm/: client.rs  deepseek_template.rs  mod.rs  tokenizer.rs  types.rs
backend/src/memory/: store.rs
backend/src/security/: injection_scanner.rs  mod.rs  threat_patterns.rs
backend/src/server/: mod.rs
backend/src/server/routes/: chat.rs  config.rs  cron.rs  files.rs  im.rs  logs.rs  mcp.rs  mentions.rs  mod.rs  models.rs  sessions.rs  skills.rs  tools.rs  weixin_login.rs
backend/src/server/ws/: chat.rs  files.rs  logs.rs  mod.rs  terminal.rs
backend/src/skills/: loader.rs
backend/src/soul/: loader.rs  manager.rs  mod.rs  models.rs
backend/src/tools/: approval.rs  builtin.rs  execute.rs  lsp.rs  mod.rs  registry.rs  truncated_result_saver.rs  types.rs
backend/src/tools/builtin/: agent_manage.rs  apply_patch.rs  cron.rs  delegate.rs  execute.rs  file_ops.rs  im_push.rs  memory_tools.rs  mod.rs  plan_tools.rs  todo_tools.rs  web_fetch.rs  web_search.rs
backend/src/weixin/: adapter.rs  cdn.rs  client.rs  mod.rs  upload.rs
docker/: Dockerfile  entrypoint.sh  nginx.conf
docs/: BUG修复与性能优化任务列表.md  SkillUseMode.md  api.md  architecture.md  configuration.md  contributing.md  cron.md  delete_file确认功能代码审查报告.md  mcp.md  memory.md  multi-agent.md  prompt-engineering-design.md  quickstart.md  rust-tools-system-design.md  skills.md  task-plan-implementation-analysis.md  tools.md  命令执行取认机制.md  命令执行工具-开发计划.md  多渠道IM集成架构设计.md  流式代码生成-实时预览面板设计方案.md  目录树工作目录选择器-设计方案.md
docs/agent/: claw-code-agent-loop-analysis.md  codex-agent-loop-analysis.md  hermes-agent-loop-analysis.md
docs/fix/: token-cachehitrate-rendering-fix.md
docs/memory/: codex-memory-analysis.md  hermes-agent-memory-analysis.md
docs/my/: @文件选择器功能实施文档（完成）.md  BUG修复与性能优化任务列表.md  DeepSeek-Reasonix技术分析报告.md  DeepSeek缓存命中率核心原理.md  IM推送工具设计文档.md  ReAct + Agent Loop + CoT分析结果.md  Tauri桌面端API请求问题修复.md  agent工具调用优化方案.md  code-review-report.md  context-management-analysis.md  novaclaw后端缓存优化分析报告.md  prompt-engineering-design.md  task-plan-implementation-analysis.md  technical-assessment-report.md  代码分析报告.md  命令执行取认机制.md  命令执行工具-开发计划.md  多渠道IM集成架构设计.md  对接多个钉钉机器人multi-account-dingtalk.md  对接多个钉钉机器人multi-account-dingtalk（完成）.md  对接新IM渠道开发指南.md  技能自学习系统实施文档.md  流式代码生成-实时预览面板设计方案.md  消息存储与图片存储方案.md  消息存储与图片存储方案（完成）.md  目录树工作目录选择器-设计方案（完成）.md  缓存命中率计算.md  记忆系统设计方案.md
docs/my/agent/: hermes-agent-loop-analysis.md
docs/my/memory/: claw-code-memory-analysis.md
docs/my/prompt/: claw-code-prompt-analysis.md  codex-prompt-analysis.md  hermes-agent-prompt-analysis.md
docs/my/sessions/: claw-code-session-analysis.md  hermes-agent-session-analysis.md
docs/my/skills/: skills系统未来演进设计.md
docs/my/tools/: hermes-agent-tools-system-analysis.md
docs/sessions/: codex-session-analysis.md
docs/skills/: claw-code-skills-analysis.md  codex-skills-analysis.md  hermes-agent-skills-analysis.md  skills系统未来演进设计.md
docs/tools/: claw-code-tools-system-analysis.md  codex-codex-rs-tools-system-analysis.md
scripts/: generate-icons.cjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  create_icons.ps1  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  lib.rs  main.rs
src/components/: ChatMessages.tsx  ChatPanel.tsx  FileEditor.tsx  FileExplorer.tsx  LogPanel.tsx  ModelSelector.tsx  SessionList.tsx  Sidebar.tsx  TaskList.tsx  TerminalPanel.tsx  ToolPanel.tsx  TreeBrowser.tsx
src/components/ui/: ApprovalDialog.tsx  Button.tsx  CacheStatsBadge.tsx  Card.tsx  ConfirmDialog.tsx  ContextRing.tsx  Input.tsx  Tabs.tsx
src/contexts/: ChatContext.tsx  LayoutContext.tsx  ThemeContext.tsx
src/hooks/: useApi.ts  useFileEditor.ts  useFileWs.ts  useTauriCommands.ts  useTerminal.ts  useWebSocket.ts
src/i18n/: index.ts
src/i18n/locales/: en-US.json  zh-CN.json
src/lib/: imageCompress.ts
src/pages/: AgentSettings.tsx  Chat.tsx  Cron.tsx  Dashboard.tsx  IMSettings.tsx  LogsPage.tsx  MCPSettings.tsx  ModelSettings.tsx  ScheduledTasksPage.tsx  Settings.tsx  SettingsPage.tsx  Skills.tsx  SkillsSettings.tsx
src/types/: fileEditor.ts  index.ts  terminal.ts
