[package]
name = "novaclaw-backend"
version = "0.1.0"
edition = "2021"
description = "NovaClaw AI Agent Backend - ReAct Agent Engine with Axum/WebSocket"

[[bin]]
name = "novaclaw-server"
path = "src/main.rs"

[lib]
name = "novaclaw_backend"
path = "src/lib.rs"

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }

# HTTP 服务器
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# HTTP 客户端 (LLM API)
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "blocking"], default-features = false }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# UUID
uuid = { version = "1", features = ["v4"] }

# 时间
chrono = { version = "0.4", features = ["serde"] }

# 平台目录（仅用于获取 home 目录）
dirs = "5"

# 错误处理
thiserror = "1"
anyhow = "1"

# 异步流
async-stream = "0.3"
futures = "0.3"
tokio-stream = "0.1"

# 延迟初始化
once_cell = "1"

# 文件系统
glob = "0.3"
walkdir = "2"
regex = "1"

# 字符编码转换（Windows GBK/GB2312）
encoding_rs = "0.8"

# Unix 系统信号处理
nix = { version = "0.28", features = ["signal"] }

# Windows 系统 API
windows-sys = { version = "0.52", features = ["Win32_System_Console", "Win32_Foundation"] }

# URL 编码
urlencoding = "2"

# 文件监视
notify = { version = "6", optional = true }

# ZIP 解压（技能上传）
zip = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
